Improved positioning of document component background images to ensure that text is always visible

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -361,6 +361,11 @@ h3.list-page-header {
    margin-bottom: 1.3rem;
 }
 
+.document-component-body {
+   font-weight: 500;
+   background-position: top center;
+}
+
 .text-component-body,
 .contact-details-component-body {
    background: transparent;
